# opengl-game-engine

./: CMakeLists.txt  LICENSE  README.md  main.cpp
cmake/Modules/: FindFreeGLUT.cmake
lib/: Node.cpp  Node.h  Tree.cpp  Tree.h
model/: AabbDetector.cpp  AabbDetector.h  Animation.cpp  Animation.h  AnimationEngine.cpp  AnimationEngine.h  Camera.cpp  Camera.h  FrameState.cpp  FrameState.h  MapTree.cpp  MapTree.h  Material.cpp  Material.h  MaterialContainer.cpp  MaterialContainer.h  ModelObject.cpp  ModelObject.h  animationtemplate.cpp  animationtemplate.h
resources/: map.mmap
util/: AnimationParser.cpp  AnimationParser.h  MapFileLoader.cpp  MapFileLoader.h  MtlFileLoader.cpp  MtlFileLoader.h  ObjFileLoader.cpp  ObjFileLoader.h  animationcontainer.cpp  animationcontainer.h
